--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
   navigator.vibrate([1000, 500, 1000, 500, 1000, 500, 1000, 500, 1000, 500, 1000, 500, 1000, 500]);
  </script>
  
- <body><h1>hey...</h1></body>
+ <body><h1>this is the earth...</h1></body>
