--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<script type="text/javascript">
-  navigator.vibrate = navigator.vibrate ||
-       navigator.webkitVibrate ||
-       navigator.mozVibrate ||
-       navigator.msVibrate;
- 
-  navigator.vibrate([1000, 500, 1000, 500, 1000, 500, 1000, 500, 1000, 500, 1000, 500, 1000, 500]);
+<script type="text/javascript"> 
+  window.navigator.vibrate([100,30,100,30,100,200,200,30,200,30,200,200,100,30,100,30,100]); // Vibrate 'SOS' in Morse.
  </script>
  
  <body><h1>this is the earth...</h1></body>
